feat: started item.active attribute logic